#12,#13,#14,#15 fix: post CRUD function 요청사항 반영하여 코드 수정 중